--- a/src/componets/NavBar/NavBar.css
+++ b/src/componets/NavBar/NavBar.css
@@ -59,5 +59,7 @@ nav .nav-links a:hover:after {
 }
 
 @media screen and (max-width: 1220px) {
-    nav li {display: none;}
+    nav li {
+        display: none;
+    }
 }
