--- a/src/componets/Table/Table.css
+++ b/src/componets/Table/Table.css
@@ -1,4 +1,6 @@
 table {
+    margin-top: 10px;
+    margin-left: 10px;
     font-family: arial, sans-serif;
     border-collapse: collapse;
 }
@@ -22,12 +24,12 @@ tr:nth-child(even) {
 
 button {
     align-items: center;
-    background-color: #FFFFFF;
+    background-color: #1d7902;
     border: 1px solid rgba(0, 0, 0, 0.1);
     border-radius: .25rem;
     box-shadow: rgba(0, 0, 0, 0.02) 0 1px 3px 0;
     box-sizing: border-box;
-    color: rgba(0, 0, 0, 0.85);
+    color: rgb(255, 255, 255);
     cursor: pointer;
     display: inline-flex;
     font-family: system-ui,-apple-system,system-ui,"Helvetica Neue",Helvetica,Arial,sans-serif;
@@ -35,7 +37,7 @@ button {
     font-weight: 600;
     justify-content: center;
     line-height: 1.25;
-    margin: 0;
+    margin: 10px;
     min-height: 3rem;
     padding: calc(.875rem - 1px) calc(1.5rem - 1px);
     position: relative;
@@ -45,7 +47,7 @@ button {
     -webkit-user-select: none;
     touch-action: manipulation;
     vertical-align: baseline;
-    width: auto;
+    width: 100%;
 }
 
 button:hover,
