--- a/src/componets/Moveout/registerout.module.css
+++ b/src/componets/Moveout/registerout.module.css
@@ -39,45 +39,34 @@ button:hover {
   opacity: 0.8;
 }
 
-.cancelbtn {
-  width: auto;
-  padding: 10px 18px;
-  background-color: #f44336;
-}
-
 .container {
   padding: 16px;
   width: 50%;
-  position: absolute;
-  top:25%;
-  bottom: 0;
-  left: 0;
-  right: 0;
   margin: auto;
 }
 
-.col-25 {
+.col_25 {
   float: left;
   width: 25%;
   margin-top: 6px;
   padding: 6px;
 }
 
-.col-50 {
+.col_50 {
   float: left;
   width: 50%;
   margin-top: 6px;
   padding: 6px;
 }
 
-.col-75 {
+.col_75 {
   float: left;
   width: 75%;
   margin-top: 6px;
   padding: 6px;
 }
 
-.col-100 {
+.col_100 {
   float: left;
   width: 100%;
   margin-top: 6px;
