--- a/src/componets/NavBar/NavBar.css
+++ b/src/componets/NavBar/NavBar.css
@@ -1,8 +1,8 @@
-li {
+nav li {
     list-style-type: none;
 }
 
-a {
+nav a {
     text-decoration: none;
 }
 
@@ -14,13 +14,16 @@ nav {
     min-height: 10vh;
     align-items: center;
     color: white;
-    background: #6200EE;
+    background: #4CAF50;
     box-shadow: 0 0 25px 0 black;
 }
 
 nav .logo {
     font-size: 30px;
     text-transform: uppercase;
+    font-family: Brush Script MT, Brush Script Std, cursive;
+    color: brown;
+    text-align: center;
 }
 
 nav .nav-links {
