--- a/src/componets/Table/Table.css
+++ b/src/componets/Table/Table.css
@@ -1,6 +1,6 @@
 table {
-    margin-top: 10px;
-    margin-left: 10px;
+    padding: 10px;
+    width: 100%;
     font-family: arial, sans-serif;
     border-collapse: collapse;
 }
