fixed css errors

--- a/src/componets/Table/Table.module.css
+++ b/src/componets/Table/Table.module.css
@@ -15,7 +15,7 @@ thead {
 }
 
 tbody {
-    height: 600px;
+    /* height: 600px; */
     width: 100%;
     overflow-y: auto;
     overflow-x: hidden;
