--- a/src/componets/Modal/modal.module.css
+++ b/src/componets/Modal/modal.module.css
@@ -8,7 +8,7 @@
     background: rgba(0, 0, 0, 0.6);
 }
 
-.modal-main {
+.modal_main {
     position:fixed;
     background: white;
     width: 80%;
@@ -18,11 +18,11 @@
     transform: translate(-50%,-50%);
 }
 
-.display-block {
+.display_block {
     display: block;
 }
 
-.display-none {
+.display_none {
     display: none;
 }
 
@@ -31,5 +31,7 @@
 }
 
 .btn {
-    margin: 10px;
+    /* margin: 10px; */
+    width: 100%;
+    margin: auto;
 }
