Fixed admin dashboard

--- a/src/componets/AdminDashboard/AdminDashboard.module.css
+++ b/src/componets/AdminDashboard/AdminDashboard.module.css
@@ -2,7 +2,50 @@
     margin: 50px auto;
     max-width: 1000px;
     display: grid;
-    grid-template-columns: repeat(3, 1fr);
+    grid-template-columns: repeat(1, 1fr);
     gap: 20px;
     font-family: sans-serif;
+}
+
+.chart_cards {
+    margin: 50px auto;
+    max-width: 90vw;
+    display: grid;
+    grid-template-columns: repeat(1, 1fr);
+    gap: 20px;
+    font-family: sans-serif;
+}
+
+.fixed_header{
+    top: 65px;
+    width: 100%;
+    position: fixed;
+    background: ghostwhite;
+    padding: 10px 0;
+    color: ghostwhite;
+}
+
+body {
+    overflow-y: hidden;
+}
+
+div.scroll {
+    width: 100%;
+    height: 100vh;
+    overflow-x: hidden;
+    overflow-y: auto;
+    padding: 20px;
+}
+
+/* Desktop menu */
+@media all and (min-width: 960px) {
+    .cards {
+        max-width: 1000px;
+        grid-template-columns: repeat(2, 1fr);
+    }
+
+    .chart_cards {
+        max-width: 1000px;
+        grid-template-columns: repeat(1, 1fr);
+    }
 }
