--- a/src/componets/Auth/auth.module.css
+++ b/src/componets/Auth/auth.module.css
@@ -73,3 +73,24 @@ span.psw {
   margin-top: 6px;
   padding: 6px;
 }
+
+.alert {
+  padding: 20px;
+  background-color: #f44336;
+  color: white;
+}
+
+.closebtn {
+  margin-left: 15px;
+  color: white;
+  font-weight: bold;
+  float: right;
+  font-size: 22px;
+  line-height: 20px;
+  cursor: pointer;
+  transition: 0.3s;
+}
+
+.closebtn:hover {
+  color: black;
+}
