Register functionality added

--- a/src/componets/Auth/auth.module.css
+++ b/src/componets/Auth/auth.module.css
@@ -80,17 +80,16 @@ span.psw {
   color: white;
 }
 
-.closebtn {
-  margin-left: 15px;
-  color: white;
-  font-weight: bold;
-  float: right;
-  font-size: 22px;
-  line-height: 20px;
-  cursor: pointer;
-  transition: 0.3s;
+.red {
+  background-color: #f44336;
 }
 
-.closebtn:hover {
-  color: black;
+.green {
+  background-color: #1d7902;
+}
+
+.registerForm {
+  padding: unset;
+  margin: unset;
+  border: unset;
 }
