--- a/src/componets/Flight/flights.module.css
+++ b/src/componets/Flight/flights.module.css
@@ -1,72 +1,74 @@
-form {border: 3px solid #f1f1f1;}
+form {
+    border: 3px solid #f1f1f1;
+}
 
 input[type=text], input[type=password], input[type=date], input[type=number], input[type=file], select {
-  width: 100%;
-  padding: 5px 20px;
-  margin: 8px 0;
-  display: inline-block;
-  border: 1px solid #ccc;
-  box-sizing: border-box;
-  height: 40px;
+    width: 100%;
+    padding: 5px 20px;
+    margin: 8px 0;
+    display: inline-block;
+    border: 1px solid #ccc;
+    box-sizing: border-box;
+    height: 40px;
 }
 
 h2 {
-  width: 100%;
-  text-align: center;
+    width: 100%;
+    text-align: center;
 }
 
 .container button {
-  background-color: #04AA6D;
-  color: white;
-  padding: 14px 20px;
-  margin: 8px 0;
-  border: none;
-  cursor: pointer;
-  width: 100%;
+    background-color: #04AA6D;
+    color: white;
+    padding: 14px 20px;
+    margin: 8px 0;
+    border: none;
+    cursor: pointer;
+    width: 100%;
 }
 
 button:hover {
-  opacity: 0.8;
+    opacity: 0.8;
 }
 
 .container {
-  padding: 16px;
-  width: 75%;
-  margin: auto;
+    padding: 16px;
+    width: 75%;
+    margin: auto;
 }
 
 .col_25 {
-  float: left;
-  width: 25%;
-  margin-top: 6px;
-  padding: 6px;
+    float: left;
+    width: 25%;
+    margin-top: 6px;
+    padding: 6px;
 }
 
 .col_50 {
-  float: left;
-  width: 50%;
-  margin-top: 6px;
-  padding: 6px;
+    float: left;
+    width: 50%;
+    margin-top: 6px;
+    padding: 6px;
 }
 
 .col_75 {
-  float: left;
-  width: 75%;
-  margin-top: 6px;
-  padding: 6px;
+    float: left;
+    width: 75%;
+    margin-top: 6px;
+    padding: 6px;
 }
 
 .col_100 {
-  float: left;
-  width: 100%;
-  margin-top: 6px;
-  padding: 6px;
+    float: left;
+    width: 100%;
+    margin-top: 6px;
+    padding: 6px;
 }
 
 .totals {
-  margin: 0;
-  /* position: absolute; */
-  top: 50%;
+    margin: 0;
+    /* position: absolute; */
+    top: 50%;
 }
 
 .totals_item {
@@ -88,3 +90,12 @@ button:hover {
     width: 40%;
     text-align: right;
 }
+
+.error {
+    color: #f44336;
+}
+
+.success {
+    color: #1d7902;
+}
+
