--- a/src/componets/Table/Table.module.css
+++ b/src/componets/Table/Table.module.css
@@ -107,3 +107,12 @@ button:active {
 
 @media screen and (max-width: 1220px) {
 }
+
+.action {
+    justify-content: center;
+}
+
+.actionIcon {
+    float: left;
+    padding: 0 10px;
+}
